[package]
name = "kanban"
version = "0.1.0"
description = "KANBANI — a native local Kanban board"
authors = ["Vighnesh Shukla"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kanban_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "s"   # optimize for size -> smaller binary, faster to load
lto = true        # link-time optimization
codegen-units = 1 # better optimization at the cost of compile time
strip = true      # strip symbols to shrink the binary
panic = "abort"   # no unwinding machinery

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

